--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: elixir
 elixir: '1.6.4'
 
+install:
+  - mix local.rebar --force
+  - mix local.hex --force
+  - mix deps.get --no-compile
+  - mix deps.compile
+
 script:
   - mix docs
 
