--- a/.github/workflows/update_repo.yml
+++ b/.github/workflows/update_repo.yml
@@ -10,6 +10,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    container:
+      image: spaceeec/elixir:1.9-slim
+
     steps:
       - name: Clone repository
         uses: actions/checkout@v1
